Abstract, Related Work and Target writeup

--- a/HW/Final Project/proposal/mybib.bib
+++ b/HW/Final Project/proposal/mybib.bib
@@ -50,3 +50,133 @@
   year={2013},
   publisher={Newnes}
 }
+@inproceedings{whitted1979improved,
+  title={An Improved Illumination Model for Shaded Display},
+  author={Whitted, Turner},
+  booktitle={ACM SIGGRAPH Computer Graphics},
+  volume={23},
+  issue={6},
+  pages={343--349},
+  month = {June},
+  year={1980},
+  organization={ACM}
+}
+@book{shirley2008realistic,
+  title={Realistic Ray Tracing},
+  author={Shirley, Peter and Morley, R Keith},
+  year={2003},
+  isbn = {1-56881-198-5},
+  publisher={AK Peters, Ltd.}
+}
+@book{pharr2016physically,
+  title={Physically Based Rendering: From Theory to Implementation},
+  author={Pharr, Matt and Jakob, Wenzel and Humphreys, Greg},
+  edition={3rd},
+  year={2016},
+  publisher={Morgan Kaufmann}
+}
+@inproceedings{cook1984distributed,
+  title={Distributed ray tracing},
+  author={Cook, Robert L and Porter, Thomas and Carpenter, Loren},
+  booktitle={ACM SIGGRAPH Computer Graphics},
+  volume={18},
+  number={3},
+  pages={137--145},
+  year={1984},
+  organization={ACM}
+}
+@article{cook1986stochastic,
+  title={Stochastic Sampling in Computer Graphics},
+  author={Cook, Robert L},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={5},
+  number={1},
+  pages={51--72},
+  month = {January}},
+  year={1986},
+  publisher={ACM}
+}
+@inproceedings{shinya1994post,
+  title={Post-filtering for Depth of Field Simulation with Ray Distribution Buffer},
+  author={Shinya, Mikio},
+  booktitle={Graphics Interface},
+  pages={59--59},
+  year={1994},
+  organization={Canadian Information Processing Society}
+}
+@inproceedings{amanatides1984ray,
+  title={Ray Tracing with Cones},
+  author={Amanatides, John},
+  booktitle={ACM SIGGRAPH Computer Graphics},
+  volume={18},
+  number={3},
+  pages={129--135},
+  year={1984},
+  organization={ACM}
+}
+@article{ward1988ray,
+  title={A Ray Tracing Solution for Diffuse Interreflection},
+  author={Ward, Gregory J and Rubinstein, Francis M and Clear, Robert D},
+  journal={ACM SIGGRAPH Computer Graphics},
+  volume={22},
+  number={4},
+  pages={85--92},
+  month={August},
+  year={1988},
+  publisher={ACM}
+}
+@book{pharr2016physically,
+  title={Physically Based Rendering: From Theory to Implementation},
+  author={Pharr, Matt and Jakob, Wenzel and Humphreys, Greg},
+  year={2016},
+  publisher={Morgan Kaufmann - Elsevier}
+}
+@ARTICLE{4057175, 
+  author={J. Goldsmith and J. Salmon}, 
+  journal={IEEE Computer Graphics and Applications}, 
+  title={Automatic Creation of Object Hierarchies for Ray Tracing}, 
+  year={1987}, 
+  volume={7}, 
+  number={5}, 
+  pages={14-20}, 
+  keywords={Computational modeling;Image databases;Optical refraction;Ray tracing;Rendering (computer graphics);Visual databases}, 
+  doi={10.1109/MCG.1987.276983}, 
+  ISSN={0272-1716}, 
+  month={May}
+}
+@article{Snyder:1987:RTC:37402.37417,
+ author = {Snyder, John M. and Barr, Alan H.},
+ title = {Ray Tracing Complex Models Containing Surface Tessellations},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {July 1987},
+ volume = {21},
+ number = {4},
+ month = aug,
+ year = {1987},
+ issn = {0097-8930},
+ pages = {119--128},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/37402.37417},
+ doi = {10.1145/37402.37417},
+ acmid = {37417},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+@article{Kay:1986:RTC:15886.15916,
+ author = {Kay, Timothy L. and Kajiya, James T.},
+ title = {Ray Tracing Complex Scenes},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {Aug. 1986},
+ volume = {20},
+ number = {4},
+ month = aug,
+ year = {1986},
+ issn = {0097-8930},
+ pages = {269--278},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/15886.15916},
+ doi = {10.1145/15886.15916},
+ acmid = {15916},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
