--- a/HW/Final Project/proposal/proposal.tex
+++ b/HW/Final Project/proposal/proposal.tex
@@ -26,7 +26,10 @@
 \newcommand{\wes}{{\fontfamily{qcr}\selectfont wesBench}}
 %=========================Doc====================================%
 \begin{document}
-\title{Project Proposal - EEC 277}
+\title{Project Proposal - EEC 277\\
+\vspace{2mm}
+Accelerating Ray Tracing on The Graphics Pipeline}
+
 \author{Yuxin Chen and Ahmed H. Mahmoud}
 \date{21 February 2017} 
 \maketitle
@@ -39,7 +42,7 @@
 
 \input{tex/goal}
 
-\input{tex/milestones}
+
 
 
 %=========================Bib====================================%
