--- a/HW/Final Project/proposal/tex/goal.tex
+++ b/HW/Final Project/proposal/tex/goal.tex
@@ -1,2 +1,10 @@
-\section{Goal}
-%========================= Goal ====================================%
+\section{Target}
+%========================= Target ====================================%
+The target of our project can be summed in the following milestone 
+\begin{enumerate}
+\item Implementing of ray tracing on fragment shader. (1 Week)
+\item Implementing uniform gird, kd-tree to accelerate the performance
+\item Experimenting with complex scenes. (1 Week)
+\item In parallel, implementation on CUDA for final comparison between OpenGL-based and CUDA-based ray tracing. (1 Week)
+\item Report and presentation. (1 Week)
+\end{enumerate}
