Fixed bib conflict, additional Related Work and Deliverables

--- a/HW/Final Project/proposal/mybib.bib
+++ b/HW/Final Project/proposal/mybib.bib
@@ -1,4 +1,4 @@
-sch@misc{angle2011interactive,
+@misc{angle2011interactive,
   title={Interactive Computer Graphics: A Top-Down Approach with Shader-Based {O}pen{GL}},
   author={Angle, E and Shreiner, D},
   year={2011},
@@ -37,7 +37,7 @@ sch@misc{angle2011interactive,
   journal={NVIDIA Technical White Paper},  
   year={2011}
 }
-@article{stuart2013mobile,
+@article{stuart2013mobile},
   title={Mobile {GPU} Floating Point Accuracy Variances},
   author={Russell, Stuart},  
   year={2013},  
@@ -92,7 +92,7 @@ sch@misc{angle2011interactive,
   volume={5},
   number={1},
   pages={51--72},
-  month = {January}},
+  month = {January},
   year={1986},
   publisher={ACM}
 }
@@ -125,12 +125,7 @@ sch@misc{angle2011interactive,
   year={1988},
   publisher={ACM}
 }
-@book{pharr2016physically,
-  title={Physically Based Rendering: From Theory to Implementation},
-  author={Pharr, Matt and Jakob, Wenzel and Humphreys, Greg},
-  year={2016},
-  publisher={Morgan Kaufmann - Elsevier}
-}
+
 @ARTICLE{4057175, 
   author={J. Goldsmith and J. Salmon}, 
   journal={IEEE Computer Graphics and Applications}, 
@@ -199,4 +194,57 @@ sch@misc{angle2011interactive,
   pages={703--712},
   year={2002},
   organization={ACM}
+}
+@inproceedings{foley2005kd,
+  title={KD-tree acceleration structures for a GPU raytracer},
+  author={Foley, Tim and Sugerman, Jeremy},
+  booktitle={Proceedings of the ACM SIGGRAPH/EUROGRAPHICS conference on Graphics hardware},
+  pages={15--22},
+  year={2005},
+  organization={ACM}
+}
+@article{karimi2010performance,
+  title={A Performance Comparison of CUDA and OpenCL},
+  author={Karimi, Kamran and Dickson, Neil G and Hamze, Firas},
+  journal={arXiv preprint arXiv:1005.2581v3},
+  year={2011}
+}
+@inproceedings{komatsu2010evaluating,
+  title={Evaluating performance and portability of OpenCL programs},
+  author={Komatsu, Kazuhiko and Sato, Katsuto and Arai, Yusuke and Koyama, Kentaro and Takizawa, Hiroyuki and Kobayashi, Hiroaki},
+  booktitle={The fifth international workshop on automatic performance tuning},
+  volume={66},
+  pages={1},
+  year={2010}
+}
+@INPROCEEDINGS{6419068, 
+author={C. L. Su and P. Y. Chen and C. C. Lan and L. S. Huang and K. H. Wu}, 
+booktitle={2012 IEEE Asia Pacific Conference on Circuits and Systems}, 
+title={Overview and comparison of OpenCL and CUDA technology for GPGPU}, 
+year={2012}, 
+pages={448-451}, 
+keywords={application program interfaces;graphics processing units;parallel architectures;performance evaluation;CUDA technology;DirectX;GPGPU;NVIDIA;OpenCL technology;compute unified device architecture;computing field;graphics processing unit;open computing language;open standard API;parallel computing architecture;Computer architecture;Graphics processing units;Kernel;Parallel processing;Performance evaluation;Programming;Runtime}, 
+doi={10.1109/APCCAS.2012.6419068}, 
+month={Dec}
+}
+@INPROCEEDINGS{5161005, 
+author={N. Satish and M. Harris and M. Garland}, 
+booktitle={2009 IEEE International Symposium on Parallel Distributed Processing}, 
+title={Designing efficient sorting algorithms for manycore GPUs}, 
+year={2009}, 
+pages={1-10}, 
+keywords={merging;parallel algorithms;parallel architectures;shared memory systems;sorting;CUDA-based radix sorts;GPU architecture;comparison-based sort;fine-grained parallelism;high-performance parallel merge sort routines;high-performance parallel radix sort routines;high-speed onchip shared memory;manycore GPU;multicore CPU sorting routine;sorting algorithms;Algorithm design and analysis;Computer architecture;Concurrent computing;Data structures;Database systems;Global communication;Multicore processing;Parallel architectures;Parallel processing;Sorting}, 
+doi={10.1109/IPDPS.2009.5161005}, 
+ISSN={1530-2075}, 
+month={May}
+}
+@INPROCEEDINGS{7833400, 
+author={F. Sans and R. Carmona}, 
+booktitle={2016 XLII Latin American Computing Conference (CLEI)}, 
+title={Volume ray casting using different GPU based parallel APIs}, 
+year={2016}, 
+pages={1-11}, 
+keywords={application program interfaces;parallel architectures;parallel programming;rendering (computer graphics);CUDA;GPU based parallel API;OpenGL;compute shader;computer graphics;fragment shader;volume ray casting;volume rendering;Casting;Graphics processing units;Image color analysis;Mathematical model;Rendering (computer graphics);Three-dimensional displays;Visualization;CUDA;Compute Shader;GPU;OpenCL;OpenGL;Parallel APIs;Performance Comparison;Volume Ray Casting}, 
+doi={10.1109/CLEI.2016.7833400}, 
+month={October}
 }
