--- a/HW/Final Project/proposal/tex/abs.tex
+++ b/HW/Final Project/proposal/tex/abs.tex
@@ -1,3 +1,3 @@
 \section{Abstract}
 %========================= Abstract ====================================%
-We propose to explore few challenges regarding implementation of ray tracing through the graphic pipeline using OpenGL fragment shader. Using efficient data structure is the natural choice to think of when implementing a CPU-based ray tracing due to well-developed implementation of these data structure on CPU and virtually unlimited amount of memory available. It is expected that that mapping such data structure into fragment shader will have an overhead due to the nature of the graphics pipeline. In this work, we would like to explore the challenges of implementing ray tracing on GPU in terms of which data structure is more efficient, how the necessary elimination of recursion calls would affect the performance and comparison with CUDA-based ray tracing where greater flexibility is available. 
+We propose to explore few challenges regarding implementation of ray tracing through the graphic pipeline using OpenGL fragment shader. Using efficient data structure is the natural choice to think of when implementing a CPU-based ray tracing due to well-developed implementation of these data structure on CPU and virtually unlimited amount of memory available. It is expected that that mapping such data structure into fragment shader will have an overhead due to the nature of the graphics pipeline. In this work, we would like to explore the challenges of implementing ray tracing on GPU in terms of which data structure is more efficient, how the necessary elimination of recursion calls would affect the performance, and comparing against CUDA-based ray tracing where greater flexibility is available.
